<resources>
    <string name="app_name">ToKiteList</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameOfItem">Kitem</string>
    <string name="addSpot">add spot!</string>
    <string name="ready">GO!</string>
    <string name="addButtonDescr">add item</string>
    <string name="allDoneDescr">all done!</string>
    <string name="addSpotFromAddItemFragment">add new spot</string>
    <string name="search">search</string>
    <string name="sort_by">sort by</string>
    <string name="filter">filter</string>
    <string name="add">add</string>
    <string name="removeItem">delete</string>
    <string name="delete">delete</string>
    <string name="backFromCheckedListButtonDescr">back from checked kitems list button</string>
    <string name="toCheckedListButtonDescr">button to go to checked list</string>
    <string name="logSessionButton">Log Session</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="addSpotButton">add spot</string>
    <string name="newSpotHint">enter new spot</string>
    <string name="delete_spot">delete this spot</string>
    <string name="delete_session">delete this session</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kitems</string>
    <string name="nav_header_subtitle">www.nikoop.de</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Kitems</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="linkToSessionsList">Sessions</string>
    <string name="add_session_button">add session button</string>
</resources>