<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.list.CheckedListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/checkedRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_nothingChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_ready"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/checkedRecyclerView"
        app:layout_constraintEnd_toEndOf="@+id/checkedRecyclerView"
        app:layout_constraintStart_toStartOf="@+id/checkedRecyclerView"
        app:layout_constraintTop_toTopOf="@+id/checkedRecyclerView"
        app:layout_constraintVertical_bias="0.42000002"
        android:contentDescription="@string/allDoneDescr" />

    <TextView
        android:id="@+id/textView_nothingChecked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".5"
        android:text="@string/ready"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_nothingChecked" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_backFromCheckedList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/ic_arrow_right"
        android:tint="#FFFFFF"
        app:backgroundTint="@color/primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nothingChecked"
        app:layout_constraintVertical_bias="0.942"
        android:contentDescription="@string/backFromCheckedListButtonDescr"
        android:focusable="true" />
</androidx.constraintlayout.widget.ConstraintLayout>


























