<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.list.KitemsListFragment"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_kitems_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefreshList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/kitemsListRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


        <ImageView
            android:id="@+id/imageView_ready"
            android:layout_width="268dp"
            android:layout_height="241dp"
            android:alpha="0.5"
            android:contentDescription="@string/allDoneDescr"
            android:src="@drawable/ic_kitesurfbg"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.32999998" />


        <LinearLayout
            android:id="@+id/button_logSession"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/swipeRefreshList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView_ready">

            <ImageView
                android:id="@+id/button_logSession_button"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:src="@drawable/ic_log_add"
                />

            <TextView
                android:id="@+id/button_logSession_text"
                android:layout_width="90dp"
                android:layout_height="22dp"
                android:ems="14"
                android:textSize="16dp"
                android:text="@string/logSessionButton"
                />
        </LinearLayout>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton_toCheckedList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="18dp"
            android:clickable="true"
            android:contentDescription="@string/toCheckedListButtonDescr"
            android:focusable="true"
            android:src="@drawable/ic_arrow_left"
            android:tint="#FFFFFF"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_logSession"
            app:layout_constraintVertical_bias="0.942" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="18dp"
            android:clickable="true"
            android:contentDescription="@string/addButtonDescr"
            android:focusable="true"
            android:src="@drawable/ic_add"
            android:tint="#FFFFFF"
            app:backgroundTint="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.954"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_logSession"
            app:layout_constraintVertical_bias="0.942" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>